A. Anton and Polyhedrons/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:49:31 **** Rebuild of configuration Debug for project A. Anton and Polyhedrons ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Anton and Polyhedrons.o" "..\\src\\A. Anton and Polyhedrons.cpp" 
g++ -o "A. Anton and Polyhedrons.exe" "src\\A. Anton and Polyhedrons.o" 
21:49:44 **** Incremental Build of configuration Debug for project A. Anton and Polyhedrons ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Anton and Polyhedrons.o" "..\\src\\A. Anton and Polyhedrons.cpp" 
..\src\A. Anton and Polyhedrons.cpp: In function 'int main()':
..\src\A. Anton and Polyhedrons.cpp:18:12: warning: comparison with string literal results in unspecified behavior [-Waddress]
   if(p[0]=="T")sum+=4;
            ^~~
..\src\A. Anton and Polyhedrons.cpp:18:12: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
..\src\A. Anton and Polyhedrons.cpp:19:17: warning: comparison with string literal results in unspecified behavior [-Waddress]
   else if(p[0]=="C")sum+=6;
                 ^~~
..\src\A. Anton and Polyhedrons.cpp:19:17: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
..\src\A. Anton and Polyhedrons.cpp:20:17: warning: comparison with string literal results in unspecified behavior [-Waddress]
   else if(p[0]=="O")sum+=8;
                 ^~~
..\src\A. Anton and Polyhedrons.cpp:20:17: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
..\src\A. Anton and Polyhedrons.cpp:21:17: warning: comparison with string literal results in unspecified behavior [-Waddress]
   else if(p[0]=="D")sum+=12;
                 ^~~
..\src\A. Anton and Polyhedrons.cpp:21:17: error: ISO C++ forbids comparison between pointer and integer [-fpermissive]
21:50:18 **** Incremental Build of configuration Debug for project A. Anton and Polyhedrons ****
Info: Configuration "Debug" uses tool-chain "MinGW GCC" that is unsupported on this system, attempting to build anyway.
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\A. Anton and Polyhedrons.o" "..\\src\\A. Anton and Polyhedrons.cpp" 
g++ -o "A. Anton and Polyhedrons.exe" "src\\A. Anton and Polyhedrons.o" 
Info: Nothing to build for A. Anton and Polyhedrons
Info: Nothing to build for A. Anton and Polyhedrons
